update videosite/videosite-web/README.md.
Signed-off-by: 维维 <zww1990@foxmail.com>