@@ -1,2 +1,5 @@
 # 模块描述
 web 模块，对应 MVC 的 V 概念，存放视图层的逻辑
+
+# jdk21导出jre
+jlink.exe --module-path jmods --add-modules java.base,java.datatransfer,java.xml,java.prefs,java.desktop,java.compiler,java.instrument,java.logging,java.management,java.security.sasl,java.naming,java.rmi,java.management.rmi,java.net.http,java.scripting,java.security.jgss,java.transaction.xa,java.sql,java.sql.rowset,java.xml.crypto,java.se,java.smartcardio,jdk.accessibility,jdk.internal.jvmstat,jdk.attach,jdk.charsets,jdk.internal.opt,jdk.zipfs,jdk.compiler,jdk.crypto.ec,jdk.crypto.cryptoki,jdk.crypto.mscapi,jdk.dynalink,jdk.hotspot.agent,jdk.httpserver,jdk.internal.ed,jdk.internal.le,jdk.internal.vm.ci,jdk.javadoc,jdk.jcmd,jdk.jdwp.agent,jdk.jdi,jdk.jfr,jdk.jsobject,jdk.localedata,jdk.management,jdk.management.agent,jdk.management.jfr,jdk.naming.dns,jdk.naming.rmi,jdk.net,jdk.sctp,jdk.security.auth,jdk.security.jgss,jdk.unsupported,jdk.unsupported.desktop,jdk.xml.dom --output jre
